--- a/src/app/components/how-it-works/how-it-works.component.html
+++ b/src/app/components/how-it-works/how-it-works.component.html
@@ -7,7 +7,7 @@
         <div class="col clr ">
             <div class='mar padding text'>
                 <h5> NO. 1</h5>
-                <hr>
+                <hr class = 'w-25'>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, cupiditate voluptatibus necessitatibus nostrum qui in quis sapiente corporis, provident minus illum? Praesentium nam tenetur eveniet eius temporibus quidem natus autem.</p>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <div class="col">
             <div class='mar1 text'>
                 <h5> NO. 1</h5>
-                <hr>
+                <hr class = 'w-25'>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, cupiditate voluptatibus necessitatibus nostrum qui in quis sapiente corporis, provident minus illum? Praesentium nam tenetur eveniet eius temporibus quidem natus autem.</p>
             </div>
         </div>
@@ -28,7 +28,7 @@
         <div class="col">
             <div class='mar1 text'>
                 <h5> NO. 1</h5>
-                <hr>
+                <hr class = 'w-25'>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, cupiditate voluptatibus necessitatibus nostrum qui in quis sapiente corporis, provident minus illum? Praesentium nam tenetur eveniet eius temporibus quidem natus autem.</p>
             </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="col clr ">
             <div class='mar padding text'>
                 <h5> NO. 1</h5>
-                <hr>
+                <hr class = 'w-25'>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, cupiditate voluptatibus necessitatibus nostrum qui in quis sapiente corporis, provident minus illum? Praesentium nam tenetur eveniet eius temporibus quidem natus autem.</p>
             </div>
         </div>
@@ -58,7 +58,7 @@
         <div class="col">
             <div class='mar1 text'>
                 <h5> NO. 1</h5>
-                <hr>
+                <hr class='w-25'>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, cupiditate voluptatibus necessitatibus nostrum qui in quis sapiente corporis, provident minus illum? Praesentium nam tenetur eveniet eius temporibus quidem natus autem.</p>
             </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="col">
             <div class='mar1 text'>
                 <h5> NO. 1</h5>
-                <hr>
+                <hr class = 'w-25'>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, cupiditate voluptatibus necessitatibus nostrum qui in quis sapiente corporis, provident minus illum? Praesentium nam tenetur eveniet eius temporibus quidem natus autem.</p>
             </div>
         </div>
@@ -75,7 +75,7 @@
 </div>
 
 <div class="container clr connect ">
-    <div class='mt-5 pt-3'>   
+    <div class='pt-3'>   
         <div class='text-center '>
             <h3>ARE YOU READY TO BE SWEPT AWAY?</h3>
         </div>
