--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -49,7 +49,10 @@
                         class="form-control"
                         ngModel
                         name="name"
-                        required>
+                        required
+                        #name = "ngModel">
+                        <span *ngIf=" name.touched" 
+                        class= 'help-block'>Please enter your name</span>
                     </div>
 
                     <div class="form-group">
