--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,10 +1,11 @@
-<div class="imgDiv">
-    <img id="img1" class="bgImage" src="/assets/images/Event2.jpg" alt="homeimage">
-    <img id= "img2" class="bgImage" src="/assets/images/Event_Medium.jpg" alt="homeimage">
-    <div class="scroll">
-        Scroll
-        <hr class="scrollLine">
-        
+      <div class="imgDiv">
+
+        <img id="img1" class="bgImage" src="/assets/images/Event2.jpg" alt="homeimage">
+            <img id= "img2" class="bgImage" src="/assets/images/Event_Medium.jpg" alt="homeimage">
+            
+        </div>
+
+    <div class="container-fluid">
+        <services-link></services-link>
     </div>
-    
-</div>
+       
