--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<router-outlet>
-    <app-header></app-header>
+<app-header>
+</app-header>
 
-</router-outlet>
+<router-outlet></router-outlet>
+
+<!-- <app-header></app-header> -->
