--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
-* {
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     overflow: hidden;
-}
+  }
 
-/* .bgImage {
-    background-image: url(/src/assets/images/Event2.jpg);
-    background-size: cover;
-} */
 
 #img1 {
     display: block;
@@ -19,27 +18,24 @@
 img {
     width: 100%;
     height: 100%;
-
-    /* background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed; */
 }
 
 .imgDiv {
     height: 100%;
     width: 100%;
     align-items: center;
+    position: relative;
+    z-index: -9999;
 }
 
 
-div {
+/* div {
     position: absolute;
     width: 100%;
     z-index: -9999;
     max-height: 100vh;
     overflow: hidden;
-}
+} */
 
 .scroll {
     font-family: 'Montserrat', sans-serif;
