--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -5,12 +5,12 @@
     margin: 0;
 
 }
-.conatiner-fluid{
+/* .conatiner-fluid{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     overflow: hidden;
-  }
+  } */
   .cover {
     /* display: block; */
     width: 100vw;
@@ -34,7 +34,12 @@
     overflow: hidden;
     
   }
-
+  .texts {
+    width: 75%;
+    font-size: 0.8rem;
+    overflow:hidden;
+    
+  }
   .text {
     width: 60%;
     font-size: 0.8rem;
