--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -43,13 +43,13 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-3">
+        <div class="col-3 mr-3">
             <div class= 'vertical-line '> </div>
            
         </div> 
         
         <div class="col">
-            <div class="mt-5 pt-4 text">
+            <div class="mt-5 pt-4 texts">
                 <p>
                     The Venice First Team’s goal is to leave your guests satisfied with the beauty of Venice and the event you put together.
 The office is now composed of a team of professionals who come from different industries and experiences, and together they represent the perfect team: from the Hôtellerie to the Accounting, from the luxury travel services to the DMC.
