--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -50,7 +50,7 @@
 
                 <div class="form-group">
                     <label for="more"> Tell Us More About Your Event</label>
-                    <textarea id='more' class="form-control" formControlName="eventDetails"> </textarea>
+                    <textarea id='more' rows=2  class="form-control" formControlName="eventDetails"> </textarea>
                 </div>
 
                 <button class="btn btn-primary" type="submit">Submit</button>
