--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -35,11 +35,14 @@
     </div>
 </div>
 
-<div class='conatiner '>
+<!-- <div class='conatiner '>
     <div class=" clr pt-5">
         
             <div class=" text-center inner">
                 <h3 class='text-danger'> Enquiries </h3>
+               
+                
+                
                 <form #f="ngForm" (ngSubmit) = "onSubmit(f)">
                     <div class="form-group">
                         <label for ="name"> Name</label>
@@ -85,20 +88,7 @@
                         class= 'help-block'>Please enter valid email</span>
                     </div>
 
-                    <!-- <div class="form-group mx-5">
-                        <label for ="confirmemail"> Confirm Email</label>
-                        <input 
-                        type="text"
-                        id='confirmemail'
-                        class="form-control"
-                        ngModel
-                        name="confirmemail"
-                        required
-                        email
-                        #confirm = "ngModel">
-                        <span *ngIf="!confirm.valid && confirm.touched " 
-                        class= 'help-block'>Please enter valid email</span>
-                    </div> -->
+                    
                     <div class="form-group mt-5">
                         <label for="cars">Event Type</label>
                         <select name="type" ngModel placeholder= 'SELECT'>
@@ -125,12 +115,15 @@
                     Submit
                 </button>
 
-                </form>
+                </form> 
             </div>
         
     </div>
     
-    <!-- <services-link></services-link> -->
 
 
+</div> -->
+
+<div class=" mb-5">
+    <app-contact-form></app-contact-form>
 </div>
