--- a/src/app/contact-form/contact-form.component.css
+++ b/src/app/contact-form/contact-form.component.css
@@ -1,4 +1,13 @@
 .container {
     margin-top: 30px;
   }
-  
+  input.ng-invalid.ng-touched {
+    border: 1px solid red;
+  }
+
+
+  /* textarea.ng-invalid.ng-touched {
+  border: 1px solid red;
+  } */
+
+  /* && contactForm.get('name').touched */
