--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -8,4 +8,11 @@
     <div class="container-fluid">
         <services-link></services-link>
     </div>
+
+    <div id="imageContainer" class="container-fluid">
+        <img id="weddingImage" src="/assets/images/wedding.jpg">
+        <div class="centered">
+            Wedding Planners
+        </div>
+    </div>
        
