--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -15,6 +15,29 @@
     display: none;
 }
 
+#weddingImage {
+    filter: brightness(60%) blur(2px);
+    /* filter: blur(2px); */
+  /* -webkit-filter: blur(2px); */
+}
+
+#imageContainer {
+    position: relative;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
+  color: white;
+  letter-spacing: 4px;
+  font-weight: bold;
+    /* text-decoration-color: white; */
+}
+
 img {
     width: 100%;
     height: 100%;
