--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -33,3 +33,11 @@ div {
     font-family: 'Montserrat', sans-serif;
 }
 
+.navbar{
+    background-color: black;
+    
+}
+.logo{
+    width: 100px;
+    height : 40px
+}
