--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
     <nav class="navbar navbar-expand-sm fixed-top navbar-dark" data-toggle="affix">
       <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" [routerLink]= "['/']"><span><img src='../../../assets/1.png' class='logo'></span></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
