--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,9 +1,12 @@
-      <div class="imgDiv">
+      <div class="container-fluid">
+        <div class="imgDiv ">
 
-        <img id="img1" class="bgImage" src="/assets/images/Event2.jpg" alt="homeimage">
+            <img id="img1" class="bgImage" src="/assets/images/Event2.jpg" alt="homeimage">
             <img id= "img2" class="bgImage" src="/assets/images/Event_Medium.jpg" alt="homeimage">
-            
-        </div>
+                
+            </div>
+      </div>
+     
 
     <div class="container-fluid">
         <services-link></services-link>
