--- a/src/app/components/testimonial/testimonial.component.html
+++ b/src/app/components/testimonial/testimonial.component.html
@@ -4,11 +4,11 @@
             <div class="col-md-8 offset-md-2 col-10 offset-1 mt-5">
                 <h2 class="text-center mt-5 mb-5 pb-2 text-uppercase text-dark"><strong>Testimonials</strong></h2>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
+                  <!-- <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                  </ol>
+                  </ol> -->
                   <div class="carousel-inner mt-4">
                     <div class="carousel-item text-center active">
                         <div class="img-box p-1 border rounded-circle m-auto">
