--- a/src/app/components/organizational/organizational.component.html
+++ b/src/app/components/organizational/organizational.component.html
@@ -1,1 +1,27 @@
-<p>organizational works!</p>
+   
+    <div class="shell">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="wsk-cp-product">
+              <div class="wsk-cp-img">
+                <img src="../../../assets/contact.jpg" class="img-responsive" />
+              </div>
+              <div class="wsk-cp-text">
+                <div class="category">
+                  <span>Ethnic</span>
+                </div>
+                <div class="title-product">
+                  <h3>My face not my heart</h3>
+                </div>
+                <div class="description-prod">
+                  <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
+                </div>
+               
+              </div>
+            </div>
+          </div>
+          
+      </div>
+    </div>
+    
