--- a/src/app/components/personal-events/personal-events.component.html
+++ b/src/app/components/personal-events/personal-events.component.html
@@ -1,1 +1,52 @@
-<p>personal-events works!</p>
+<div class="conatiner-fluid">
+    <div class="row">
+        <img src= "../../../assets/conatct_cover.jpg" alt ='cover_image' class='cover img-fluid '>
+
+    </div>
+</div>
+
+
+<div class="conatiner-fluid ">
+    <div class="row ">
+        
+        <div class="col  ">
+
+            <div class="space">
+                <p >Services</p>
+            </div>
+            
+        </div>
+        <div class="col  ">
+            <div class="space-left">
+                <p>LET US HELP YOU PLAN THE PERFECT EVENT WITH EFFORTLESS STYLE</p>
+            </div>
+
+            
+        </div>
+    </div>
+
+    <div class="row ">
+        
+        <div class="col  ">
+            <div class="space">
+                <p >Deventure Select</p>
+            </div>
+            
+        </div>
+        <div class="col ">
+            <div class = "text space-left">
+                <p>Venice First has a concierge style approach to helping you plan and coordinate a service in any city. With our connections, we will help you find a perfect venue, provide any accommodations for you and your guests, and ensure your party runs as smoothly as possible.</p>
+            </div>
+            
+        </div>
+    </div>
+</div>
+
+<div id="imageContainer" class="container-fluid">
+    <img id="weddingImage" src="/assets/images/wedding.jpg">
+    <div class="centered">
+        "THANKING YOU FOR A TRULY MEMORABLE EVENT WEEKEND. VENICE PROVIDES A BREATHTAKING BACKGROUND FOR ANY PARTY BUT COMBINED WITH YOUR TALENTS, IT WAS SPECTACULAR! "
+    </div>
+</div>
+
+<!-- CARDS -->
