--- a/src/app/components/contact-us/contact-us.component.css
+++ b/src/app/components/contact-us/contact-us.component.css
@@ -7,7 +7,7 @@
 .cover {
     /* display: block; */
     width: 100vw;
-    height: 92vh;
+    max-height: 100vh;
     max-width: 100%;
     overflow: hidden;
     /* max-height: 90%; */
