--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<app-header>
-</app-header>
+<app-header></app-header>
+<!-- 
+<router-outlet></router-outlet> -->
 
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)" ></router-outlet>
 
 
 <app-footer></app-footer>
