--- a/src/app/components/organizational/organizational.component.css
+++ b/src/app/components/organizational/organizational.component.css
@@ -4,10 +4,12 @@ body{
   background:#ddd;
 }
 .shell{
-  padding:80px 0;
+  padding:150px 0;
+
 }
 .wsk-cp-product{
   background:#fff;
+  /* height: 100%; */
   padding:15px;
   border-radius:6px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -89,90 +91,27 @@ body{
   font-weight:bold;
   margin:15px auto;
   overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   width:100%;
+  
 }
 .wsk-cp-text .description-prod p{
   margin:0;
 }
-/* Truncate */
+
 .wsk-cp-text .description-prod {
+    /* font-size:10px; */
   text-align:center;
   width: 100%;
-  height:100%;
+  
   overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
   margin-bottom:15px;
 }
-.card-footer{
-  padding: 25px 0 5px;
-  border-top: 1px solid #ddd;
-}
-.card-footer:after, .card-footer:before{
-  content:'';
-  display:table;
-}
-.card-footer:after{
-  clear:both;
-}
 
-.card-footer .wcf-left{
-  float:left;
-  
-}
-
-.card-footer .wcf-right{
-  float:right;
-}
-
-.price{
-  font-size:18px;
-  font-weight:bold;
-}
-
-a.buy-btn{
-  display:block;
-  color:#212121;
-  text-align:center;
-  font-size: 18px;
-  width:35px;
-  height:35px;
-  line-height:35px;
-  border-radius:50%;
-  border:1px solid #212121;
-  transition: all 0.2s ease-in-out;
-}
-a.buy-btn:hover , a.buy-btn:active, a.buy-btn:focus{
-  border-color: #FF9800;
-  background: #FF9800;
-  color: #fff;
-  text-decoration:none;
-}
-.wsk-btn{
-  display:inline-block;
-  color:#212121;
-  text-align:center;
-  font-size: 18px;
-  transition: all 0.2s ease-in-out;
-  border-color: #FF9800;
-  background: #FF9800;
-  padding:12px 30px;
-  border-radius:27px;
-  margin: 0 5px;
-}
-.wsk-btn:hover, .wsk-btn:focus, .wsk-btn:active{
-  text-decoration:none;
-  color:#fff;
-}  
-.red{
-  color:#F44336;
-  font-size:22px;
-  display:inline-block;
-  margin: 0 5px;
-}
 @media screen and (max-width: 991px) {
   .wsk-cp-product{
     margin:40px auto;
@@ -191,9 +130,5 @@ a.buy-btn:hover , a.buy-btn:active, a.buy-btn:focus{
 .wsk-cp-product .wsk-cp-text .category{
   margin-top: 0px;
 }
-a.buy-btn{
-  border-color: #FF9800;
-  background: #FF9800;
-  color: #fff;
-}
+
 }
