--- a/src/app/components/organizational/organizational.component.html
+++ b/src/app/components/organizational/organizational.component.html
@@ -1,27 +1,169 @@
    
     <div class="shell">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="wsk-cp-product">
-              <div class="wsk-cp-img">
-                <img src="../../../assets/contact.jpg" class="img-responsive" />
-              </div>
-              <div class="wsk-cp-text">
-                <div class="category">
-                  <span>Ethnic</span>
-                </div>
-                <div class="title-product">
-                  <h3>My face not my heart</h3>
-                </div>
-                <div class="description-prod">
-                  <p>Description Product tell me how to change playlist height size like 600px in html5 player. player good work now check this link</p>
-                </div>
-               
-              </div>
-            </div>
-          </div>
-          
-      </div>
-    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="../../../assets/contact.jpg" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Personal Event</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>Birthday Party</h3>
+                            </div>
+                            <!-- <div class="description-prod">
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo deserunt dolor nihil harum blanditiis quis sed veniam error. Consectetur ipsam ratione eos. Velit qui similique labore saepe quo dicta ipsa? .</p>
+                    </div> -->
     
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="../../../assets/contact.jpg" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Personal Event</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>Birthday Party</h3>
+                            </div>
+    
+    
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="../../../assets/contact.jpg" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Personal Event</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>Birthday Party</h3>
+                            </div>
+    
+    
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="../../../assets/contact.jpg" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Personal Event</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>Birthday Party</h3>
+                            </div>
+    
+    
+                        </div>
+                    </div>
+                </div>
+
+
+                
+    
+            </div>
+        </div>
+   
+        <div class="shell m">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product">
+                            <div class="wsk-cp-img">
+                                <img src="../../../assets/contact.jpg" class="img-responsive" />
+                            </div>
+                            <div class="wsk-cp-text">
+                                <div class="category">
+                                    <span>Personal Event</span>
+                                </div>
+                                <div class="title-product">
+                                    <h3>Birthday Party</h3>
+                                </div>
+                                <!-- <div class="description-prod">
+                          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo deserunt dolor nihil harum blanditiis quis sed veniam error. Consectetur ipsam ratione eos. Velit qui similique labore saepe quo dicta ipsa? .</p>
+                        </div> -->
+        
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product">
+                            <div class="wsk-cp-img">
+                                <img src="../../../assets/contact.jpg" class="img-responsive" />
+                            </div>
+                            <div class="wsk-cp-text">
+                                <div class="category">
+                                    <span>Personal Event</span>
+                                </div>
+                                <div class="title-product">
+                                    <h3>Birthday Party</h3>
+                                </div>
+        
+        
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product">
+                            <div class="wsk-cp-img">
+                                <img src="../../../assets/contact.jpg" class="img-responsive" />
+                            </div>
+                            <div class="wsk-cp-text">
+                                <div class="category">
+                                    <span>Personal Event</span>
+                                </div>
+                                <div class="title-product">
+                                    <h3>Birthday Party</h3>
+                                </div>
+        
+        
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product">
+                            <div class="wsk-cp-img">
+                                <img src="../../../assets/contact.jpg" class="img-responsive" />
+                            </div>
+                            <div class="wsk-cp-text">
+                                <div class="category">
+                                    <span>Personal Event</span>
+                                </div>
+                                <div class="title-product">
+                                    <h3>Birthday Party</h3>
+                                </div>
+        
+        
+                            </div>
+                        </div>
+                    </div>
+    
+    
+                    
+        
+                </div>
+            </div>
+    
+         
+     
