--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,10 +9,10 @@
                     
                     <a routerLink='personalevent' class="link-1">Personal Events</a>
 					
-					<a [routerLink]="['organizationalevents']" routerLinkActive="router-link-active" >Organizational</a>
+					<a [routerLink]="['organizationalevents']" routerLinkActive="router-link-active" >Organizational Events</a>
         
         
-            <a [routerLink]="['educationalevents']" routerLinkActive="router-link-active" >Educational</a>
+            <a [routerLink]="['educationalevents']" routerLinkActive="router-link-active" >Corporate Events </a>
         
             <a [routerLink]="['toursandtravels']" routerLinkActive="router-link-active" >Tours & Travels</a>
                 
@@ -26,17 +26,18 @@
 			<div class="footer-center">
 
 				<div>
-					<i class="fa fa-map-marker"></i>
+                    <!-- <i class="fa fa-map-marker"></i> -->
+                    <img src='../../../assets/location-icon-png-4237.png' class='marker'>
 					<p><span>ADDRESS</span> India</p>
 				</div>
 
 				<div>
-					<i class="fa fa-phone"></i>
+					<img src='../../../assets/phone-icon-925.png' class='marker'>
 					<p>8950777755</p>
 				</div>
 
 				<div>
-					<i class="fa fa-envelope"></i>
+					<img src='../../../assets/email-icon-121.png' class='marker'>
 					<p><a href="mailto:deventureselect@gmail.com">deventureselect@gmail.com</a></p>
 				</div>
 
@@ -45,17 +46,19 @@
 			<div class="footer-right">
 
 				<p class="footer-company-about">
-					<span>About the company</span>
-					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+                    <span>  </span>
+                    Lets Connect! We're Friendly:
 				</p>
 
-				<div class="footer-icons">
+				<div class="footer-icons ">
 
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="https://www.facebook.com/deventureselect/" target="_blank"><img src='../../../assets/f_logo_RGB-Blue_1024.png' class ='logos'></a>
+                    
+                    <a href="https://instagram.com/deventure.select?igshid=qjqs6z80az88" target="_blank"><img src='../../../assets/instagram-logo-png-2428.png' class ='logos'></a>
+<!-- 
+                    <a href="#"><img src='../../../assets/f_logo_RGB-Blue_1024.png' class ='logos'></a>
 
+                    <a href="#"><img src='../../../assets/instagram-logo-png-2428.png' class ='logos'></a> -->
 				</div>
 
 			</div>
