--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -9,25 +9,16 @@
     height : 10%
 }
 
-section {
-  width: 100%;
-  display: inline-block;
-  background: #333;
-  height: 50vh;
-  text-align: center;
-  font-size: 22px;
-  font-weight: 700;
-  text-decoration: underline;
-}
 
 .footer-distributed{
 	background: #666;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	/* box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12); */
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-	padding: 55px 50px;
+    padding: 15px 50px;
+    
 }
 
 .footer-distributed .footer-left,
@@ -136,6 +127,10 @@ section {
   content: none;
 }
 
+.footer-center{
+    padding : 15px;
+}
+
 /* Footer Right */
 
 .footer-distributed .footer-right{
@@ -164,10 +159,10 @@ section {
 
 .footer-distributed .footer-icons a{
 	display: inline-block;
-	width: 35px;
-	height: 35px;
+	/* width: 35px;
+	height: 35px; */
 	cursor: pointer;
-	background-color:  #33383b;
+	/* background-color:  #33383b; */
 	border-radius: 2px;
 
 	font-size: 20px;
@@ -179,7 +174,21 @@ section {
 	margin-bottom: 5px;
 }
 
-/* If you don't want the footer to be responsive, remove these media queries */
+
+
+
+.logos{
+    width: 40px;
+    height : 40px;
+    margin-right: 10px;
+    
+}
+.marker{
+    width: 20px;
+    height : 20px;
+    margin-right: 13px;
+    
+}
 
 @media (max-width: 880px) {
 
