--- a/src/app/components/services-link/services-link.component.css
+++ b/src/app/components/services-link/services-link.component.css
@@ -9,6 +9,7 @@ div {
 }
 
 .serv-links {
+    padding-top: 10px;
     display: flex;
     justify-content: space-around;
     width: 60%;
@@ -23,7 +24,21 @@ div {
 .serv-links a {
     color: black;
     text-decoration: none;
-    /* letter-spacing: 2px; */
+    letter-spacing: 2px;
     font-weight: bold;
     font-size: 20px;
 }
+
+.logo{
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    padding-right: 1px;
+    padding-bottom:5px ;
+}
+
+.zoom:hover {
+    transform: scale(1.1); 
+  }
+  
+  
