--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,12 +7,15 @@
 
 				<p class="footer-links">
                     
-                    <a routerLink='personalevent' class="link-1">Personal Events</a>
+                    <a routerLink='personalevent' class="link-1"> | Personal Events </a>
+
+                    <!-- <a routerLink='personalevent' >Personal Events |</a> -->
+
 					
 					<a [routerLink]="['organizationalevents']" routerLinkActive="router-link-active" >Organizational Events</a>
         
-        
-            <a [routerLink]="['educationalevents']" routerLinkActive="router-link-active" >Corporate Events </a>
+                    <br>
+            <a [routerLink]="['educationalevents']" routerLinkActive="router-link-active" >Corporate Events  </a>
         
             <a [routerLink]="['toursandtravels']" routerLinkActive="router-link-active" >Tours & Travels</a>
                 
