--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,9 +1,14 @@
       <div class="container-fluid">
         <div class="imgDiv ">
 
-            <img id="img1" class="bgImage" src="/assets/images/Event2.jpg" alt="homeimage">
-            <img id= "img2" class="bgImage" src="/assets/images/Event_Medium.jpg" alt="homeimage">
-                
+            <img id="img1" class="bgImage" src="../../../assets/lamp.jpg" alt="homeimage">
+            <!-- <img id= "img2" class="bgImage" src="/assets/images/Event_Medium.jpg" alt="homeimage"> -->
+                <div class="scroll">
+                    Scroll
+                    <!-- <div class="scrollLine">
+                        <hr>
+                    </div> -->
+                </div>
             </div>
       </div>
      
