--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -7,12 +7,14 @@
     overflow: hidden;
   }
   .bgImage{
-     max-height: 92vh;
+     max-height: 100vh;
   }
 
 
 #img1 {
     display: block;
+    object-fit: cover;
+    filter: brightness(50%);
 }
 #img2 {
     display: none;
@@ -70,6 +72,8 @@ img {
     color: white;
     z-index: 1;
     left: 50%;
+    /* margin-left: auto;
+    margin-right: auto; */
     /* top: 100%; */
     /* display: flex;
     justify-content: center; */
