--- a/src/app/components/services-link/services-link.component.css
+++ b/src/app/components/services-link/services-link.component.css
@@ -4,15 +4,15 @@ div {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 8vh;
-    background-color: antiquewhite;
+    min-height: 15vh;
+    background-color: white;
 }
 
 .serv-links {
     padding-top: 10px;
     display: flex;
     justify-content: space-around;
-    width: 60%;
+    width: 80%;
     font-family: 'Montserrat', sans-serif;
     align-items: center;
 }
@@ -24,7 +24,7 @@ div {
 .serv-links a {
     color: black;
     text-decoration: none;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     font-weight: bold;
     font-size: 20px;
 }
