--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -14,7 +14,7 @@
 #img1 {
     display: block;
     object-fit: cover;
-    filter: brightness(50%);
+    filter: brightness(60%);
 }
 #img2 {
     display: none;
@@ -22,8 +22,7 @@
 
 #weddingImage {
     filter: brightness(60%) blur(2px);
-    /* filter: blur(2px); */
-  /* -webkit-filter: blur(2px); */
+    
 }
 
 #imageContainer {
@@ -40,7 +39,6 @@
   color: white;
   letter-spacing: 4px;
   font-weight: bold;
-    /* text-decoration-color: white; */
 }
 
 img {
@@ -57,57 +55,171 @@ img {
 }
 
 
-/* div {
-    position: absolute;
-    width: 100%;
-    z-index: -9999;
-    max-height: 100vh;
-    overflow: hidden;
-} */
-
 .scroll {
     font-family: 'Montserrat', sans-serif;
-    /* margin-top: 80%; */
+    
     position: absolute;
     color: white;
     z-index: 1;
     left: 50%;
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* top: 100%; */
-    /* display: flex;
-    justify-content: center; */
+    
     bottom: 1%;
     letter-spacing: 2px;
    
 }
 
-.scrollLine {
-    margin-top:22px;
-    border: 0.1px solid white;
-    position: absolute;
-    z-index: 1;
-    width: 50%;
-    /* height: -0.1px; */
 
-    /* height: 10px; */
+h1 {
+    position: relative;
+    color: rgba(0, 0, 0, .3);
+    font-size: 1em
+}
+h1:before {
+    content: attr(data-text);
+    position: absolute;
+    overflow: hidden;
+    max-width: 15em;
+    white-space: nowrap;
+    color: #fff;
+    animation: loading 3s linear;
+}
+@keyframes loading {
+    0% {
+        max-width: 0;
+    }
 }
 
  @media screen and (max-width: 767px) {
      #img1 {
-         display: none;
-     }
-     #img2 {
          display: block;
      }
+     
     .imgDiv {
         
         height: 50%;
     }
 }
-
-/* @media screen and (max-width: 575px) {
-    .imgDiv {
-        height: 50%;
+ 
+@media only screen and (max-width: 600px) {
+    h1 {
+        position: relative;
+        color: rgba(0, 0, 0, .3);
+        font-size: .3em
     }
-}  */
+    h1:before {
+        content: attr(data-text);
+        position: absolute;
+        overflow: hidden;
+        max-width: 30em;
+        white-space: nowrap;
+        color: #fff;
+        animation: loading 3s linear;
+    }
+    @keyframes loading {
+        0% {
+            max-width: 0;
+        }
+
+    }
+
+    .centered {
+       
+      font-size: 20px;
+      
+    }
+    .scroll {
+        display: none;
+       
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+    h1 {
+        position: relative;
+        color: rgba(0, 0, 0, .3);
+        font-size: .35em
+    }
+    h1:before {
+        content: attr(data-text);
+        position: absolute;
+        overflow: hidden;
+        max-width: 30em;
+        white-space: nowrap;
+        color: #fff;
+        animation: loading 3s linear;
+    }
+    @keyframes loading {
+        0% {
+            max-width: 0;
+        }
+
+    }
+
+    .centered {
+       
+      font-size: 25px;
+      
+    }
+    .scroll {
+        display: none;
+       
+    }
+
+}
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+    h1 {
+        position: relative;
+        color: rgba(0, 0, 0, .3);
+        font-size: .5em
+    }
+    h1:before {
+        content: attr(data-text);
+        position: absolute;
+        overflow: hidden;
+        max-width: 30em;
+        white-space: nowrap;
+        color: #fff;
+        animation: loading 3s linear;
+    }
+    @keyframes loading {
+        0% {
+            max-width: 0;
+        }
+
+    }
+    .centered {
+        
+      font-size: 35px;
+      
+    }
+    .scroll {
+        display: none;
+       
+    }
+
+}
+
+
+@media only screen and (min-width: 992px) and (max-width: 1200px){
+    h1 {
+        position: relative;
+        color: rgba(0, 0, 0, .3);
+        font-size: .8em
+    }
+    h1:before {
+        content: attr(data-text);
+        position: absolute;
+        overflow: hidden;
+        max-width: 30em;
+        white-space: nowrap;
+        color: #fff;
+        animation: loading 3s linear;
+    }
+    @keyframes loading {
+        0% {
+            max-width: 0;
+        }
+
+    }
+  
+} 
