--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -2,6 +2,9 @@
         <div class="imgDiv ">
 
             <img id="img1" class="bgImage" src="../../../assets/lamp.jpg" alt="homeimage">
+            <div class="centered">
+                <h1 data-text="Your Luxury Planner">Your Luxury Planner</h1>
+            </div>
             <!-- <img id= "img2" class="bgImage" src="/assets/images/Event_Medium.jpg" alt="homeimage"> -->
                 <div class="scroll">
                     Scroll
@@ -22,7 +25,7 @@
     <div id="imageContainer" class="container-fluid">
         <img id="weddingImage" src="/assets/images/wedding.jpg">
         <div class="centered">
-            Wedding Planners
+            YOUR LUXURY PLANNER
         </div>
     </div>
 
