--- a/src/app/components/how-it-works/how-it-works.component.html
+++ b/src/app/components/how-it-works/how-it-works.component.html
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<div class="container clr connect ">
+<!-- <div class="container clr connect ">
     <div class='pt-3'>   
         <div class='text-center '>
             <h3>ARE YOU READY TO BE SWEPT AWAY?</h3>
@@ -86,4 +86,4 @@
         </div>
         
     
-</div>
+</div> -->
