--- a/src/app/components/testimonial/testimonial.component.css
+++ b/src/app/components/testimonial/testimonial.component.css
@@ -30,6 +30,27 @@ h2::after{
 .carousel-indicators{
 	top: 320px;
 }
+
+.bg{
+	background-color: white;
+}
+
+
+.carousel-control-next-icon:after
+{
+
+  content: '>';
+  font-size: 55px;
+  color: black;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: black;
+}
+
+
 @media (min-width: 320px) and (max-width: 640px) {
 	.carousel-inner .carousel-item p{
 		font-size: 14px;
