Media Queries Added

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer class="footer-distributed mt-3">
+<footer class="footer-distributed ">
 	<!-- <div class='text-center '>
 		<h3>ARE YOU READY TO BE SWEPT AWAY?</h3>
 	</div> -->
