--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -191,9 +191,10 @@
 }
 
 @media (max-width: 880px) {
-
+	
 	.footer-distributed{
 		font: bold 14px sans-serif;
+		/* margin-top: 8rem;; */
 	}
 
 	.footer-distributed .footer-left,
