--- a/src/app/components/services-link/services-link.component.css
+++ b/src/app/components/services-link/services-link.component.css
@@ -8,7 +8,9 @@ div {
     background-color: white;
 }
 
-.serv-links {
+
+
+.serv-links  {
     padding-top: 10px;
     display: flex;
     justify-content: space-around;
@@ -42,26 +44,30 @@ div {
     transform: scale(1.1); 
   }
 
-  /* @media only screen and (max-width: 600px) {
-
-  } */
+  
 
   @media (max-width: 600px) {
-.serv-links {
+.serv-links  {
     padding-top: 10px;
+    /* padding: 50px; */
+    /* margin-left: 10%; */
     display: block;
     justify-content: space-around;
     width: 100%;
 
     font-family: 'Montserrat', sans-serif;
-    align-items: center;
+    /* align-items: center; */
 }
+
+
    
 }
-/* 
-@media only screen and (min-width: 600px) and (max-width: 768px) {
-    .serv-links {
+
+@media only screen and (min-width: 500px) and (max-width: 671px) {
+    .serv-links  {
         padding-top: 10px;
+        /* padding: 50px; */
+        margin-left: auto;
         display: block;
         justify-content: space-around;
         width: 100%;
@@ -70,5 +76,5 @@ div {
         align-items: center;
     }
 
-} */
+} 
 
