--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,71 +1,95 @@
+<footer class="footer-section mt-3 ">
 
-<footer class="footer-distributed ">
-	<!-- <div class='text-center '>
-		<h3>ARE YOU READY TO BE SWEPT AWAY?</h3>
-	</div> -->
+	<div class="container-fluid">
+		<div class="footer-cta pt-5 pb-5">
+			<div class="row ">
+				<div class="col-xl-4 col-md-6 col-lg-4 mb-30 mt-2">
+					<div class="single-cta">
+						<div class="cta-text">
 
-			<div class="footer-left ">
+							<h4>Find us</h4>
+							<img src='../../../assets/map.png' class='marker img-fluid mr-2'> 
 
-				<a  [routerLink]= "['/']"><span><img src='../../../assets/1.png' class='logo'></span></a>
+							
+							<span>Shop - 72 GF, Agro mall, Sector-20, <section> Panchkula, India </section> </span>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-4 col-lg-4 col-md-6 mb-30 mt-2">
+					<div class="single-cta">
+						<div class="cta-text ">
+							<h4>Call us</h4>
+						<img src='../../../assets/phone.png' class=' marker img-fluid mr-2'>
 
-				<p class="footer-links">
-                    
-                    <a routerLink='personalevent' ><span class='links'>Personal Events </span></a>
+							<span>+91-8708873958</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-4 col-lg-4 col-md-6 mb-30 mt-2">
+					<div class="single-cta">
+						<div class="cta-text ">
+							<h4>Mail us</h4>
+							<img src='../../../assets/email.png' class=' marker img-fluid mr-2'>
 
-                    <!-- <a routerLink='personalevent' >Personal Events |</a> -->
-
-					
-					<a [routerLink]="['organizationalevents']" routerLinkActive="router-link-active" ><span class='links'>Organizational Events </span></a>
-        
-                    <br>
-            <a [routerLink]="['educationalevents']" routerLinkActive="router-link-active" ><span class='links'>Corporate Events</span></a>
-        
-            <a [routerLink]="['toursandtravels']" routerLinkActive="router-link-active" ><span class='links'>Tours & Travels</span></a>
-                
-        </p> 
-                <div class=' mt-3'>
-                    <p class="footer-company-name">Company Name © 2015</p>
-                </div>
+							<span><a  href="mailto:deventureselect@gmail.com">deventureselect@gmail.com</a></span>
+						</div>
+					</div>
+				</div>
 				
 			</div>
+		</div>
+	</div>
 
-			<div class="footer-center">
+	<hr class='site-footer'>
 
-				<div class=' pt-4 pb-4'>
-                    <img src='../../../assets/pin.png' class='marker'>
-					<p><span>Shop - 72 GF, Agro mall, Sector - 20 </span> Panchkula,India</p>
+	
+		<div class="container">
+			
+			<div class="footer-content pt-5 pb-5">
+				<div class="row">
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-50">
+						<div class="footer-widget">
+							<div class="footer-logo">
+								<a  [routerLink]= "['/']"><span><img src='../../../assets/1.png' class=' img-fluid'></span></a>
+							</div>
+							<div class="footer-text">
+								<p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing
+								elit,Lorem ipsum dolor sit amet.</p>
+							</div>
+							<div class="footer-social-icon">
+								<span>Follow us</span>
+								<div id="images">
+
+								<a href="https://www.facebook.com/deventureselect/" target="_blank"><img src='../../../assets/f_logo_RGB-Blue_1024.png' class ='logos fblogo'></a>
+								<a href="https://instagram.com/deventure.select?igshid=qjqs6z80az88" target="_blank"><img src='../../../assets/instagram-logo-png-2428.png' class ='logos fblogo'></a>
+							</div>
+								
+							</div>
+						</div>
+					</div>
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-30">
+						<div class="footer-widget">
+							<div class="footer-widget-heading  ">
+								<h3>SERVICES</h3>
+							</div>
+							
+
+								<ul>
+									<li><a routerLink='personalevent' ><span class='links'>Personal Events </span></a></li>
+									<li><a [routerLink]="['organizationalevents']" routerLinkActive="router-link-active" ><span class='links'>Organizational Events </span></a></li>
+									<li>            <a [routerLink]="['educationalevents']" routerLinkActive="router-link-active" ><span class='links'>Corporate Events</span></a>
+									</li>
+									<li>            <a [routerLink]="['toursandtravels']" routerLinkActive="router-link-active" ><span class='links'>Tours & Travels</span></a>
+									</li>
+									
+								</ul>
+						
+
+						</div>
+					</div>
+					
 				</div>
-
-				<div class='pb-4 '>
-					<img src='../../../assets/call.png' class='marker'>
-					<p>8708873958</p>
-				</div>
-
-				<div class=' '>
-					<img src='../../../assets/email.png' class='marker'>
-					<p><a href="mailto:deventureselect@gmail.com">deventureselect@gmail.com</a></p>
-				</div>
-
 			</div>
-
-			<div class="footer-right">
-
-				<p class="footer-company-about mt-3 pt-1">
-                    <span>  </span>
-                    Lets Connect! We're Friendly:
-				</p>
-
-				<div class="footer-icons ">
-
-					<a href="https://www.facebook.com/deventureselect/" target="_blank"><img src='../../../assets/f_logo_RGB-Blue_1024.png' class ='logos'></a>
-                    
-                    <a href="https://instagram.com/deventure.select?igshid=qjqs6z80az88" target="_blank"><img src='../../../assets/instagram-logo-png-2428.png' class ='logos'></a>
-<!-- 
-                    <a href="#"><img src='../../../assets/f_logo_RGB-Blue_1024.png' class ='logos'></a>
-
-                    <a href="#"><img src='../../../assets/instagram-logo-png-2428.png' class ='logos'></a> -->
-				</div>
-
-			</div>
-
-		</footer>
+		</div>
+		
+</footer>
