--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
 
             <img id="img1" class="bgImage" src="../../../assets/lamp.jpg" alt="homeimage">
             <div class="centered">
-                <h1 data-text="Your Luxury Planner">Your Luxury Planner</h1>
+                <h1 data-text="YOUR LUXURY PLANNER">YOUR LUXURY PLANNER</h1>
             </div>
             <!-- <img id= "img2" class="bgImage" src="/assets/images/Event_Medium.jpg" alt="homeimage"> -->
                 <div class="scroll">
